[package]
name = "org-spec"
version = "0.0.1"
edition = "2021"
authors = ["Shane Sveller <shane@sveller.dev>"]
license = "MIT OR Apache-2.0"
description = "Parser, data structures and utilities for org-mode syntax per draft spec"
repository = "https://github.com/shanesveller/org-spec-rs"
keywords = ["org-mode"]
categories = ["parser-implementations", "text-processing", "command-line-utilities"]
homepage = "https://orgmode.org/worg/dev/org-syntax.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
